<resources>
    <string name="app_name">WISDOM\'S ACADEMY</string>
    <string name="vishnu_sir">Vishnu Sir\'s</string>
    <string name="title_activity_main_page">WISDOM\'S ACADEMY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WISDOM\'S ACADEMY</string>
    <string name="nav_header_subtitle">wisdomsacademy@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="student_name">Name</string>
    <string name="student_contact_no">Contact no</string>
    <string name="student_school_name">School Name</string>
    <string name="student_standard_std">Standard (Std)</string>
    <string name="student_submit">Submit</string>
    <string name="maharashtra_board">Maharashtra Board</string>
    <string name="medium_eng_and_semi_eng">Medium (Eng. and Semi Eng.)</string>
    <string name="std_v_to_ix">STD V to IX</string>
    <string name="apply_here">Apply here</string>
    <string name="s_s_c">S.S.C</string>
    <string name="contact_us">Contact us:</string>
    <string name="_9321302424">9321302424</string>
    <string name="student_details">Student Details</string>

    <!--// https://www.freepik.com/free-vector/happy-hand-drawn-students-jumping_2899464.htm-->
</resources>
