<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/student_details_close_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_action_close"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="5dp"

        />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/student_details"
                  android:gravity="center"
                  android:textSize="25sp"
                  android:layout_weight="1"
                  android:layout_marginBottom="10dp"

        />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_name"
                android:padding="15dp"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/student_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_contact_no"
                android:padding="15dp"
                android:inputType="number"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/student_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_school_name"
                android:padding="15dp"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/student_std"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_standard_std"
                android:padding="15dp"
        />

    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/student_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_submit"
            android:padding="18dp"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            android:textSize="18sp"
    />

</LinearLayout>
