<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            app:cardCornerRadius="6dp">




        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/side_nav_bar"
                android:orientation="vertical">

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maharashtra_board"
                    android:textColor="@color/colorwhite"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
            />
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_eng_and_semi_eng"
                    android:textColor="@color/colorwhite"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textStyle="italic"
            />

            <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/std_v_to_ix"
                                android:textColor="@color/colorwhite"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                        />


                    </LinearLayout>

                    <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/s_s_c"
                                android:textColor="@color/colorwhite"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                        />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout android:layout_weight="1"
                              android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:orientation="vertical"
                              android:gravity="center">

                    <TextView
                            android:id="@+id/apply_here_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/apply_here"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorwhite"
                            android:gravity="center"
                    />

                </LinearLayout>


            </LinearLayout>




            <LinearLayout
                    android:weightSum="2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:textColor="@color/colorwhite"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"
                />

                <TextView
                        android:id="@+id/call_text"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_9321302424"
                        android:textColor="@color/colorwhite"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>